added MIT License in source

--- a/tcx.html
+++ b/tcx.html
@@ -1,3 +1,12 @@
+<!--
+TCX - Temp Cipher Exchange
+
+Copyright (c) 2025 cbloecher
+Mit freundlicher Unterstützung durch GitHub Copilot.
+
+Released under the MIT License.
+Siehe https://opensource.org/licenses/MIT
+-->
 <!doctype html>
 <html lang="de">
 <head>
